--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
       <title>Enhance Interactivity and Accuracy</title>
     </head>
 
-    <body>
-      <div id="root"></div>
-      <script type="module" src="/src/main.tsx"></script>
-    </body>
+  <body style="margin: 0; padding: 0; overflow: hidden; height: 100vh; width: 100vw;">
+    <div id="root" style="height: 100vh; width: 100vw; overflow: hidden;"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
   </html>
   
